# 3dviewer

./: CMakeLists.txt  README.md
source/: main.cpp
source/controller/: scene.h  viewer.h
source/controller/implementation/: scene.cpp  scene.h  viewer.cpp  viewer.h
source/model/: cylinder.cpp  cylinder.h  object.h  scene.h
source/model/implementation/: cylinder.cpp  cylinder.h  scene.cpp  scene.h
source/view/: settings.h  view.h
source/view/gui/: settings_window.cpp  settings_window.h  view_window.cpp  view_window.h
